mirrorgate-dashboard/src/sass/components/_operations-metrics.scss
/*!
 * Copyright 2017 Banco Bilbao Vizcaya Argentaria, S.A.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// USER-METRICS
.operations {

    .component__body{
      display: flex;
      justify-content: space-around
    }

    .stats-desc {
        color: $dark-grey;
        display: inline-block;
        padding-top: 10px;
        padding-bottom: 40px;
    }
}

